src/components/units/button/_button.scss
.u-btn {
  @include typeSetting(1, semi-bold, uppercase);
  appearance: none;
  background-color: siteColor(primary-green);
  border: 1px solid siteColor(primary-green);
  border-radius: 2px;
  color: siteColor(vam-black);
  cursor: pointer;
  display: inline-block;
  margin: 10px 10px 10px 0;
  outline: 0;
  padding: 15px 25px;
  text-align: center;
  text-decoration: none;
  text-shadow: none;
  transition: border .2s, background-color .2s, color .2s;

  &:hover,
  &:focus {
    background-color: darken(siteColor(primary-green), 10);
    border-color: darken(siteColor(primary-green), 10);
    color: inherit;
    text-decoration: none;
  }

  &--arrowed {
    padding-right: 35px;
    position: relative;

    &::after {
      border: 4px solid transparent;

      border-left-color: currentColor;
      content: '';
      display: inline-block;
      margin-top: -5px;
      position: absolute;
      right: 20px;
      top: 50%;
    }
  }

  &--black {
    background-color: siteColor(vam-black);
    border: 1px solid siteColor(vam-black);
    color: siteColor(vam-white);

    &:hover,
    &:focus {
      background-color: lighten(siteColor(vam-black), 10);
      border: 1px solid lighten(siteColor(vam-black), 10);

      &.s-themed--color--hover {
        background-color: siteColor(vam-black);
      }
    }
  }

  &--micro {
    padding: 6px 10px;

    &.u-btn--arrowed {
      padding-right: 20px;

      &::after {
        right: 8px;
      }
    }
  }

  &--outlined {
    background-color: rgba(siteColor(vam-white), .8);
    border-color: siteColor(vam-grey-6);
    color: siteColor(vam-black);

    &--primary {
      background-color: rgba(siteColor(vam-black), .8);
      border-color: siteColor(primary-green);
      color: siteColor(vam-white);
    }

    &:hover,
    &:focus {
      background-color: transparent;
      border-color: siteColor(vam-grey-4);
    }
  }
}

